--- a/design/hackthethrone.html
+++ b/design/hackthethrone.html
@@ -19,7 +19,7 @@
 				</div>
 				<div class="navRight">
 					<a href="#" class="nav-link">misc.</a>
-					<a href="#" class="nav-link">photography</a>
+					<a href="../photography/photography.html" class="nav-link">photography</a>
 					<a href="#" class="nav-link">about</a>
 				</div>
 			</nav>
