added misc sect

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<a href="#" class="nav-link-l">jl/design</a>
 				</div>
 				<div class="navRight">
-					<a href="#" class="nav-link">misc.</a>
+					<a href="misc/misc.html" class="nav-link">misc.</a>
 					<a href="photography/photography.html" class="nav-link">photography</a>
 					<a href="#" class="nav-link">about</a>
 				</div>
