--- a/misc/misc.html
+++ b/misc/misc.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Photography</title>
+		<title>Misc.</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../assets/css/main.css"/>
@@ -18,16 +18,14 @@
 					<a href="../index.html" class="nav-link-l">jl/design</a>
 				</div>
 				<div class="navRight">
-					<a href="../misc/misc.html" class="nav-link">misc.</a>
-					<a href="#" class="nav-link">photography</a>
+					<a href="#" class="nav-link">misc.</a>
+					<a href="../photography/photography.html" class="nav-link">photography</a>
 					<a href="#" class="nav-link">about</a>
 				</div>
 			</nav>
 
-			<div class="construction">
-				<h1 class="construct-text">This page is under construction.</h1>
-				<h3 class="construction-subtext">Please check back later. In the mean time check out my <a href="https://www.instagram.com/jefferyyli/" class="person" target=_blank>Instagram</a>. :)</h3>
-			</div>
+			<h2 class="misc-title">misc.</h2>
+			<h4 class="misc-subtitle">Designs, illustrations, WIPs, and more from the archives. [section still under construction]</h4>
 			
 			<!-- Footer -->
 
