--- a/design/clearspider.html
+++ b/design/clearspider.html
@@ -29,7 +29,7 @@
 
 		</div>	
 
-		<div class="banner" style="background-image: url('../assets/images/design/clearspider/clearspider-banner.png')"><body id="top"></div>
+		<div class="banner" style="background-image: url('../assets/images/design/clearspider/clearspider-banner.png'); background-color: #1d73bf;"><body id="top"></div>
 
 		<div class="container">
 			<p class="proj-tags">UI/UX Design</p>
