--- a/design/hackthethrone.html
+++ b/design/hackthethrone.html
@@ -28,7 +28,7 @@
 
 		</div>
 
-		<div class="banner" style="background-image: url('../assets/images/design/HTT/HTT-banner.png')"><body id="top"></div>
+		<div class="banner" style="background-image: url('../assets/images/design/HTT/HTT-banner.png'); background-color: #c74a4a"><body id="top"></div>
 
 		<div class="container">
 			<p class="proj-tags">Web Design</p>
