--- a/design/rbcpathway.html
+++ b/design/rbcpathway.html
@@ -29,7 +29,7 @@
 
 		</div>
 		
-		<div class="banner" style="background-image: url('../assets/images/design/rbc/rbc-banner.jpg')"><body id="top"></div>
+		<div class="banner" style="background-image: url('../assets/images/design/rbc/rbc-banner.jpg'); background-color: #1e62c3;"><body id="top"></div>
 
 		<div class="container">
 			<p class="proj-tags">Design Thinking, UI/UX Design, User Research</p>
