--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			
 			<!-- Navigation -->
 			
-			<nav>
+			<nav class="home-nav">
 				<div class="navLeft">
 					<a href="#" class="nav-link-l">jl/design</a>
 				</div>
@@ -29,7 +29,7 @@
 
 			<div class="herocontainer">
 				<h1 class="hero-title">Jeffery Li</h1>
-				<h3 class="hero-subtitle">designer</h3>
+				<h3 class="hero-subtitle">designer</h3>	
 				<p class="hero-para">Hey there! I’m a designer currently studying at the University of Waterloo. My interests lie in solving design problems and creating beautiful experiences for people.</p>
 				<div class="hero-icons">
 					<a href="https://www.instagram.com/jefferyyli/" target=_blank><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
