--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 
 <html>
 	<head>
-		<title>Jeffery Li</title>
+		<title>About</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
 	</head>
 
 	<body>
@@ -14,48 +14,31 @@
 			<!-- Navigation -->
 			
 			<nav>
-				<div class="navLeft">
-				<a href="index.html" class="navName">Jeffery Li</a>
+				<div class="navLeft">	
+					<a href="index.html" class="nav-link-l">jl/design</a>
 				</div>
-					
 				<div class="navRight">
-				<a href="uiux/uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="photography/photography.html" class="navLink">Photography</a>
-				<a href="about.html" class="navLink">About</a>
+					<a href="misc/misc.html" class="nav-link">misc.</a>
+					<a href="photography/photography.html" class="nav-link">photography</a>
+					<a href="#" class="nav-link">about</a>
 				</div>
 			</nav>
 
-			<div class="aboutcontainer"> 
-				<div>
-					<img class="aboutimg" src="images/me.jpg">
-				</div>
-				<div class="aboutinfo">
-					<h1 class="abouttitle">About</h1>
-					<p class="projectBody">Hey, I'm Jeffery Li and I'm a designer. I'm a student studying Global Business and Digital Arts at the University of Waterloo with a passion for product design. I'm highly interested in solving design problems and creating beautiful experiences for people. I'm knowledgable in other creative fields such as graphic design and illustration. I'm also currently learning and interested in front-end development. In my spare time, I love going out to shoot photography and film on the streets of the city.</p>
-
-					<p class="projectBody">If you're interested in working together or have any business inquiries, feel free to contact me through <a href="mailto:jeffery.li@outwaterloo.ca" class="person">email</a> or through any of my social media channels. </p>
-
-					<a href="documents/jeffery_resume.pdf" target=_blank><button class="resume">Resume</button></a>
-
-					<p class="note">Note: Site is still in progress! Some parts are not fully responsive yet. Sorry for the issues. :)</p>
+			<h2 class="misc-title">About</h2>
+			<div class="about-sect">
+				<div class="about-left"></div>
+				<div class="about-right">
+					<p style="margin-top: 0">Hey, I'm Jeffery Li and I'm a designer. I've previously worked at <a href="https://www.rbcroyalbank.com/personal.html" class="person" target=_blank>RBC</a> as a Visual Designer Intern and I'm currently studying Global Business and Digital Arts at the University of Waterloo. Outside of school, I'm also a designer on <a href="http://hackthenorth.com/" class="person" target=_blank>Hack the North</a>, Canada's biggest hackathon. In my spare time, I like to go out to shoot photography and film in the city and would love to one day travel the world.</p>
+					<p>If you're interested in working together or have any business inquiries, feel free to contact me through <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>email</a> or through any of my social media channels.</p>
 				</div>
 			</div>
 
 			<!-- Footer -->
 
-			<div class="footer">
-				<!-- <a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p> -->
-				<a class="footerlink" href="https://www.behance.net/jeffery-li" target=_blank><img class="footericon" src="images/icons/behance.png"></a>
-				<a class="footerlink" href="https://www.instagram.com/jefferyyli" target=_blank><img class="footericon" src="images/icons/instagram.png"></a>
-				<a class="footerlink" href="https://500px.com/jefferyyli" target=_blank><img class="footericon" src="images/icons/500px.png"></a>
-				<a class="footerlink" href="https://www.linkedin.com/in/jefferylii/" target=_blank><img class="footericon" src="images/icons/linkedin.png"></a>
-				<a class="footerlink" href="https://github.com/jefferyyli" target=_blank><img class="footericon" src="images/icons/github.png"></a>
-				<a class="footerlink" href="mailto:jeffery.li@uwaterloo.ca"><img class="footericon" src="images/icons/email.png"></a>
-			</div>
-
+			<footer>
+				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
+			</footer>
 		</div>
-
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
