--- a/design/clearspider.html
+++ b/design/clearspider.html
@@ -21,7 +21,7 @@
 				<div class="navRight">
 					<a href="../misc/misc.html" class="nav-link">misc.</a>
 					<a href="../photography/photography.html" class="nav-link">photography</a>
-					<a href="#" class="nav-link">about</a>
+					<a href="../about.html" class="nav-link">about</a>
 				</div>
 			</nav>
 
