--- a/misc/misc.html
+++ b/misc/misc.html
@@ -20,7 +20,7 @@
 				<div class="navRight">
 					<a href="#" class="nav-link">misc.</a>
 					<a href="../photography/photography.html" class="nav-link">photography</a>
-					<a href="#" class="nav-link">about</a>
+					<a href="../about.html" class="nav-link">about</a>
 				</div>
 			</nav>
 
