--- a/misc/misc.html
+++ b/misc/misc.html
@@ -25,17 +25,22 @@
 			</nav>
 
 			<h2 class="misc-title">misc.</h2>
-			<h4 class="misc-subtitle">Designs, illustrations, WIPs, and more from the archives. [section still under construction]</h4>
-			<div class="tags">
-				<a href="#" class="filter">all</a>
-				<a href="#" class="filter">branding</a>
-				<a href="#" class="filter">design</a>
-				<a href="#" class="filter">illustration</a>
-			</div>
-			<div class="misc-col">
-				<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/samurai.jpg')"></div></a>
-				<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/hawkeyebox.jpg')"></div></a>
-				<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/wcmovingbox.jpg')"></div></a>
+			<h4 class="misc-subtitle">Designs, illustrations, WIPs, and more from the archives.</h4>
+
+			<div class="grid">
+				<div class="col-3">
+					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/samurai.jpg')"></div></a>
+					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/wcmovingbox.jpg')"></div></a>
+					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/yrpc.jpg')"></div></a>
+				</div>
+				<div class="col-3">
+					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/hawkeyebox.jpg')"></div></a>
+					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/arthubbox.jpg')"></div></a>
+				</div>
+				<div class="col-3 last">
+					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/bomberbox.jpg')"></div></a>
+					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/networkbox.jpg')"></div></a>
+				</div>
 			</div>
 			
 			<!-- Footer -->
